fix(project-tree): change overflow property to auto for better scrolling

--- a/frontend/src/app/components/project-tree/project-tree.component.scss
+++ b/frontend/src/app/components/project-tree/project-tree.component.scss
@@ -5,7 +5,7 @@ mat-tree {
 .project-tree-container {
   position: relative;
   height: 100%;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .loading-overlay {
